# docker-compose-cppdlib

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
lib/: CMakeLists.txt  mylib.cpp
src/: main.cpp
